# opencv-homeworks

./: README.md
lab1a/: CMakeLists.txt
lab1a/src/: lab1a.cpp
lab1b/: CMakeLists.txt
lab1b/src/: lab1b.cpp
lab2/: CMakeLists.txt
lab2/include/: global.h  utils.h
lab2/report/: lab2_report.tex
lab2/src/: lab2.cpp  utils.cpp
lab3/: CMakeLists.txt
lab3/include/: callbacks.h  filter.h  global.h  utils.h
lab3/src/: callbacks.cpp  filter.cpp  lab3.cpp  utils.cpp
lab4/: CMakeLists.txt
lab4/include/: callbacks.h  detector.h  filter.h  global.h  trackbar.h  utils.h
lab4/report/: lab4_report.tex
lab4/src/: callbacks.cpp  detector.cpp  filter.cpp  lab4.cpp  trackbar.cpp  utils.cpp
lab5/: CMakeLists.txt
lab5/include/: global.h  panoramic_image.h  panoramic_utils.h
lab5/report/: lab5_report.tex
lab5/src/: lab5.cpp  panoramic_image.cpp  panoramic_utils.cpp
lab6/: CMakeLists.txt  README.md
lab6/include/: global.h  tracker.h
lab6/report/: Homework4.aux  Homework4.tex
lab6/report/.texpadtmp/: Homework4.aux
lab6/src/: lab6.cpp  tracker.cpp
project/: CMakeLists.txt
project/data/: vocabulary.yml
project/include/: global.h  superpixel.h  superpixels_segmenter.h  tree_localizer.h  utils.h
project/report/: project_report.tex
project/src/: project.cpp  superpixel.cpp  superpixels_segmenter.cpp  tree_localizer.cpp  utils.cpp
